--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,37 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import "https://use.fontawesome.com/releases/v5.15.3/css/all.css";
 
-@media screen and (max-width: 500px) {
-  #container {
-    transform: scale(0.5);
-    -webkit-transform: scale(0.5);
-    -moz-transform: scale(0.5);
-    -ms-transform: scale(0.5);
-    -o-transform: scale(0.5);
+@media screen and (max-width: 660px) {
+  #app #box-center {
+    height: 100vh;
+    width: 100vw;
+    padding-top: 25%;
+    border-radius: 0;
+  }
+
+  #app #break-decrement,
+  #app #break-increment,
+  #app #session-decrement,
+  #app #session-increment {
+    animation: breath-color 10s infinite;
+  }
+
+  #app #credit {
+    position: absolute;
+    display: block;
+    left: 0;
+    bottom: 2%;
+    right: 0;
+    animation: breath-color 10s infinite;
+  }
+
+  #app #credit a {
+    animation: breath-color 10s infinite;
   }
 }
 
 body {
+  min-width: 330px;
   color: #fff;
   font-family: 'Poppins', sans-serif;
   text-align: center;
@@ -121,13 +141,13 @@ button {
   font-weight: 500;
 }
 
-.author {
+#credit {
   text-align: center;
   margin-top: 3%;
   color: #fff;
 }
 
-.author a {
+#credit a {
   text-decoration: none;
   font-weight: 500;
   color: #fff;
@@ -140,5 +160,15 @@ button {
 
   50% {
     background-color: #4cc77f;
+  }
+}
+
+@keyframes breath-color {
+  0%, 100% {
+    color: #50aa8d;
+  }
+
+  50% {
+    color: #4cc77f;
   }
 }
