--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import "https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap";
 @import "https://use.fontawesome.com/releases/v5.15.3/css/all.css";
 
 @media screen and (max-width: 660px) {
@@ -17,11 +17,12 @@
   }
 
   #app #credit {
-    position: absolute;
+    position: fixed;
     display: block;
     left: 0;
     bottom: 2%;
     right: 0;
+    font-size: 0.5em;
     animation: breath-color 10s infinite;
   }
 
@@ -31,7 +32,6 @@
 }
 
 body {
-  min-width: 330px;
   color: #fff;
   font-family: 'Poppins', sans-serif;
   text-align: center;
