--- a/src/index.css
+++ b/src/index.css
@@ -22,13 +22,18 @@
     left: 0;
     bottom: 2%;
     right: 0;
-    font-size: 0.5em;
+    font-size: 0.75em;
     animation: breath-color 10s infinite;
   }
 
   #app #credit a {
     animation: breath-color 10s infinite;
   }
+}
+
+* {
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  -moz-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 body {
@@ -123,7 +128,7 @@ button {
 
 #break-label,
 #session-label {
-  font-size: 0.8em;
+  font-size: 0.9em;
   color: rgba(0, 0, 0, 0.8);
 }
 
@@ -131,7 +136,7 @@ button {
 #break-increment,
 #session-decrement,
 #session-increment {
-  color: rgba(0, 0, 0, 0.7);
+  animation: breath-color 10s infinite;
   transform: translateY(10%);
 }
 
@@ -145,6 +150,7 @@ button {
   text-align: center;
   margin-top: 3%;
   color: #fff;
+  transition: all 300ms ease;
 }
 
 #credit a {
