--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,27 @@
-@import "https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap";
-@import "https://use.fontawesome.com/releases/v5.15.3/css/all.css";
+@font-face {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  src: 
+  local('Poppins Regular'), 
+  local('Poppins-Regular'),
+  url("./fonts/Poppins-Regular.ttf") format("truetype");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+@font-face {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 500;
+  src: 
+  local('Poppins Medium'), 
+  local('Poppins-Medium'),
+  url("./fonts/Poppins-Medium.ttf") format("truetype");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
 
 @media screen and (max-width: 660px) {
+  /* Style layout for mobile device */
   #app #box-center {
     height: 100vh;
     width: 100vw;
@@ -31,6 +51,7 @@
   }
 }
 
+/* Remove tap feedback on mobile device */
 * {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   -moz-tap-highlight-color: rgba(0, 0, 0, 0);
@@ -38,7 +59,7 @@
 
 body {
   color: #fff;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   text-align: center;
   animation: breath-bg 10s infinite;
   overflow: hidden;
@@ -50,6 +71,21 @@ button {
   border: none;
   color: #333;
   cursor: pointer;
+}
+
+button i {
+  opacity: 95%;
+  transform: scale(0.8);
+  transition: all 150ms;
+}
+
+button i:hover {
+  opacity: 100%;
+  transform: scale(1);
+}
+
+button i:active {
+  transform: scale(0.6);
 }
 
 #container {
@@ -66,21 +102,7 @@ button {
   border-radius: 20px;
 }
 
-.length-control {
-  margin-bottom: 7%;
-  width: 250px;
-}
-
-.btn-level,
-.length-control {
-  display: inline-block;
-}
-
-.btn-level:nth-child(3) {
-  width: 60px;
-}
-
-.timer {
+#timer {
   margin: 20px auto 30px auto;
   height: 150px;
   width: 270px;
@@ -88,7 +110,8 @@ button {
   border-radius: 20px;
 }
 
-.timer .timer-wrapper {
+/* Timer screen that display title and time left */
+#timer #timer-wrapper {
   height: 150px;
   width: 270px;
 }
@@ -104,28 +127,7 @@ button {
   font-size: 5em;
 }
 
-.timer-control {
-  display: block;
-  margin: 0 auto;
-  padding: 2%;
-  width: 250px;
-  border-radius: 15px;
-  animation: breath-bg 10s infinite;
-}
-
-.timer-control i {
-  color: #fff;
-}
-
-#start_stop i {
-  margin: 0 22px;
-}
-
-#reset i {
-  margin-left: 2px;
-  margin-right: 22px;
-}
-
+/* Timer length control for increase and decrease session and break time */
 #break-label,
 #session-label {
   font-size: 0.9em;
@@ -146,6 +148,44 @@ button {
   font-weight: 500;
 }
 
+.length-control {
+  margin-bottom: 7%;
+  width: 250px;
+}
+
+.btn-level,
+.length-control {
+  display: inline-block;
+}
+
+.btn-level:nth-child(3) {
+  width: 60px;
+}
+
+/* Timer Play, Pause and Reset button */
+#timer-control {
+  display: block;
+  margin: 0 auto;
+  padding: 2%;
+  width: 250px;
+  border-radius: 15px;
+  animation: breath-bg 10s infinite;
+}
+
+#timer-control i {
+  color: #fff;
+}
+
+#start_stop i {
+  margin: 0 22px;
+}
+
+#reset i {
+  margin-left: 2px;
+  margin-right: 22px;
+}
+
+/* Credit section. If you want to use this project, please don"t remove this credit. Thank You */
 #credit {
   text-align: center;
   margin-top: 3%;
